--- a/src/scss/components/_section-competences.scss
+++ b/src/scss/components/_section-competences.scss
@@ -1,6 +1,6 @@
 /* ------------ compétences ------------ */
 .competences {
-  width: 100vw;
+  width: 100%;
   height: 125vh;
   padding: 10px 0 0 10px;
   background: $jaune-main;
