--- a/src/scss/components/_section-single.scss
+++ b/src/scss/components/_section-single.scss
@@ -111,6 +111,7 @@
   justify-self: center;
   align-items: center;
   margin: 0 0 5% 0;
+  height: 100vh;
 }
 
 .citrouille-demo-video video {
@@ -121,7 +122,7 @@
 
 .single-voir-site{
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   margin: 5% 0;
@@ -172,6 +173,10 @@
 
 
 //  section projet-section-slider //
+.projet-section-slider{
+  height: 100vh;
+  margin: 30px 0 0 0;
+}
 .projet-section-slider h1 {
   display: flex;
   justify-content: center;
@@ -308,7 +313,6 @@
   }
   .projet-section-slider {
     margin: 30px 0 0 0;
-
   }
   .figma-verum {
     width: 100vw;
