--- a/src/scss/components/_section-single.scss
+++ b/src/scss/components/_section-single.scss
@@ -111,13 +111,12 @@
   justify-self: center;
   align-items: center;
   margin: 0 0 5% 0;
-  height: 100vh;
 }
 
 .citrouille-demo-video video {
   justify-content: center;
-  height: 75%;
-  width: 75%;
+  height: 100%;
+  width: 75vw;
 }
 
 .single-voir-site{
