--- a/src/scss/components/_section-singles.scss
+++ b/src/scss/components/_section-singles.scss
@@ -9,6 +9,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
   color: #000;
 
   text-decoration: none;
@@ -68,6 +69,7 @@
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
   gap: 0 0;
 
+  margin-bottom: 50px;
 }
 
 
@@ -215,7 +217,7 @@
     }
 
     p {
-      font-size: 14px;
+      font-size: 12px;
     }
   }
 }
@@ -234,8 +236,8 @@
     transition: all .2s ease-in-out;
   }
   .bulle {
-    height: 200px;
-    width: 200px;
+    height: 245px;
+    width: 245px;
     margin: 30px;
     border-radius: 255px;
 
