--- a/src/scss/components/_section-single.scss
+++ b/src/scss/components/_section-single.scss
@@ -133,7 +133,7 @@
 
 .single-voir-site{
   width: 100vw;
-  height: 100vh;
+  height: 80vh;
   display: flex;
   justify-content: center;
 }
@@ -149,7 +149,7 @@
   background-attachment: fixed;
   background-size: cover;
   width: 70vw;
-  height: 70vh;
+  height: 80vh;
   box-shadow: inset 0 0 0 1000px rgba(0,0,0,.3);
 
   display: flex;
@@ -335,6 +335,16 @@
     justify-self: center;
 
   }
+  .single-voir-site{
+    width: 100vw;
+    height: 70vh;
+    margin: 25px 0 0;
+    display: flex;
+    justify-content: center;
+  }
+  .image-ecommerce{
+    height: 70vh;
+  }
 }
 @media screen and (max-width: $vw-tablette2) {
   .intro-projet {
@@ -422,7 +432,16 @@
     flex-direction: column;
     align-items: center;
     justify-self: center;
-
+  }
+  .single-voir-site{
+    width: 100vw;
+    height: 70vh;
+    margin: 25px 0 0;
+    display: flex;
+    justify-content: center;
+  }
+  .image-ecommerce{
+    height: 70vh;
   }
 }
 @media screen and (max-width: $vw-tablette) {
@@ -498,6 +517,16 @@
     h1 {
       text-align: center;
     }
+  }
+  .single-voir-site{
+    width: 100vw;
+    height: 50vh;
+    margin: 25px 0 0;
+    display: flex;
+    justify-content: center;
+  }
+  .image-ecommerce{
+    height: 50vh;
   }
 }
 
@@ -597,7 +626,13 @@
   .sketchfab-embed-wrapper iframe{
     height: 50vh;
   }
-
+  .single-voir-site{
+    width: 100vw;
+    height: 20vh;
+    margin: 25px 0 0;
+    display: flex;
+    justify-content: center;
+  }
 
   .projet-section {
     margin: 30px 0 0 0;
